--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,11 @@ aux_source_directory(../test DIR_TEST)
 set(link_lib glog gtest pthread)
 set(link_math_lib armadillo blas lapack)
 
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
+SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
+
+
 aux_source_directory(../source/data DIR_DATA)
 aux_source_directory(../source/ops DIR_OP)
 aux_source_directory(../source/layer DIR_LAYER)
